update views to pull from new package, modify css to fix checkbox label wrapping issue.

--- a/sandbar/sandbar_project/static/css/sandbar_custom.css
+++ b/sandbar/sandbar_project/static/css/sandbar_custom.css
@@ -66,6 +66,10 @@ label[for=start-date]:first-of-type, label[for=end-date]:first-of-type {
 label[for=ds-min]:first-of-type, label[for=ds-max]:first-of-type {
 	cursor:help;
 }
+
+label[for=area2d-checkbox], label[for=volume-checkbox]{
+	display:inline;
+}
 input[type=date] {
 	width: 160px;
 }
